<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.activity.LoginQStart">
    <ImageView
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_alignParentStart="true"
        android:layout_margin="10dp"
        android:id="@+id/back_ic"
app:srcCompat="@drawable/back_ic"
        />
    <LinearLayout
        android:layout_width="wrap_content"
        android:orientation="vertical"
        android:id="@+id/header_lay"
        android:layout_marginTop="40dp"
        android:layout_centerHorizontal="true"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="120dp"
            android:layout_height="120dp"
            app:srcCompat="@drawable/qstart_ic"
            android:layout_gravity="center"
            />

        <TextView
            android:id="@+id/text_intro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/magic"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/qstart"
            android:textAlignment="center"
            android:textColor="@color/black2"
            android:textSize="24sp"
            android:textStyle="normal" />

    </LinearLayout>

<RelativeLayout
    android:layout_width="match_parent"
    android:id="@+id/general_lay"
    android:layout_below="@id/header_lay"
    android:visibility="visible"
    android:layout_marginTop="10dp"
    android:layout_centerHorizontal="true"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/magic"
        android:gravity="center"
        android:padding="10dp"
        android:layout_marginTop="15dp"
        android:text="@string/info__login"
        android:textAlignment="center"
        android:textColor="@color/black2"
        android:id="@+id/text_inf"
        android:textSize="18sp"
        android:textStyle="normal" />


    <com.wineberryhalley.qstart.ui.views.RoundButton
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:id="@+id/login_bt"
        android:layout_below="@id/text_inf"
        android:layout_marginTop="20dp"
        app:buttonElevation="10dp"
        android:layout_centerHorizontal="true"
        app:textPadding="8dp"
        app:textBold="true"
        app:buttonRadius="8dp"
        app:textSize="18"
        app:backgroundColor="@color/dark"
        app:textColor="@color/white"
        app:text="@string/login__"
        />
</RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:id="@+id/permission_rel"
        android:visibility="gone"
        android:layout_below="@id/header_lay"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content">
<LinearLayout
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="wrap_content">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="@font/magic"
        android:gravity="center"
        android:padding="10dp"
        android:layout_marginTop="15dp"
        android:text="@string/permissi_info"
        android:id="@+id/permiss_info"
        android:textAlignment="center"
        android:textColor="@color/black2"
        android:textSize="18sp"
        android:textStyle="normal" />

    <com.wineberryhalley.qstart.ui.views.RoundButton
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:id="@+id/permiss_bt"
        android:layout_marginTop="20dp"
        app:buttonElevation="10dp"
        android:layout_gravity="center"
        app:textPadding="8dp"
        app:textBold="true"
        app:buttonRadius="8dp"
        app:textSize="18"
        app:backgroundColor="@color/dark"
        app:textColor="@color/white"
        app:text="@string/give_permiss"
        />

    <com.wineberryhalley.qstart.ui.views.RoundButton
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:id="@+id/why_permiss_bt"
        android:layout_marginTop="20dp"
        app:buttonElevation="10dp"
        android:layout_gravity="center"
        app:textPadding="8dp"
        app:textBold="true"
        app:buttonRadius="8dp"
        app:textSize="15"
        app:backgroundColor="@color/black2"
        app:textColor="@color/white"
        app:text="@string/why_permi"
        />

</LinearLayout>




    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:id="@+id/explain_rel"
        android:layout_below="@id/header_lay"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:visibility="gone"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_centerHorizontal="true"
            android:orientation="vertical"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/magic"
                android:gravity="center"
                android:padding="10dp"
                android:layout_marginTop="15dp"
                android:text="@string/permiss_titl"
                android:textAlignment="center"
                android:textColor="@color/black2"
                android:textSize="20sp"
                android:textStyle="normal" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/magic"
                android:gravity="center"
                android:padding="10dp"
                android:layout_marginTop="15dp"
                android:text="@string/permissi_wh"
                android:textAlignment="center"
                android:textColor="@color/black2"
                android:textSize="16sp"
                android:textStyle="normal" />
            <com.wineberryhalley.qstart.ui.views.RoundButton
                android:layout_width="240dp"
                android:layout_height="wrap_content"
                android:id="@+id/back_to_permiss"
                android:layout_marginTop="20dp"
                app:buttonElevation="10dp"
                android:layout_gravity="center"
                app:textPadding="8dp"
                app:textBold="true"
                app:buttonRadius="8dp"
                app:textSize="16"
                app:backgroundColor="@color/dark"
                app:textColor="@color/white"
                app:text="@string/ok_give_permiss"
                />

        </LinearLayout>


    </RelativeLayout>

<include
    layout="@layout/sign_up_qs"
    />

    <RelativeLayout
        android:layout_width="match_parent"
        android:background="#DA000000"
        android:id="@+id/loading_rel"
        android:visibility="gone"
        android:layout_height="match_parent">

        <com.airbnb.lottie.LottieAnimationView
            android:layout_width="250dp"
            android:layout_height="250dp"
            app:lottie_loop="true"
            app:lottie_fileName="@string/loading_anim_q"
            android:layout_centerInParent="true"
            android:id="@+id/loading_"
            />

        <TextView
            android:id="@+id/text_loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/magic"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/loading_t"
            android:layout_marginTop="5dp"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/loading_"
            android:textSize="24sp"
            android:textStyle="normal" />


    </RelativeLayout>

</RelativeLayout>