<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="-40dp"
        android:background="@drawable/circlwhite">

        <View
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_margin="10dp">

        </View>
    </RelativeLayout>
<LinearLayout
    android:layout_below="@id/relay"
    android:orientation="vertical"
    android:background="@drawable/bk_round"
    android:layout_width="match_parent"

    android:layout_height="wrap_content">


    <TextView
        android:id="@+id/login_ttl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:text="@string/titl_lg_qt"
        android:textAlignment="center"
        android:textColor="@color/black2_qs"
        android:paddingEnd="15dp"
        android:paddingStart="15dp"
        android:textSize="22sp"
        android:textStyle="bold" />

    <RelativeLayout
        android:layout_width="180dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="8dp"
        android:layout_height="wrap_content">


    <com.wineberryhalley.qstart.ui.views.RoundButton
        android:id="@+id/boton_log"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
android:layout_centerInParent="true"
        app:buttonElevation="5dp"
        app:buttonRadius="8dp"
        app:text="@string/login_q"
        app:textBold="true"
        app:textPadding="8dp"
        app:textSize="16">



    </com.wineberryhalley.qstart.ui.views.RoundButton>



        <com.airbnb.lottie.LottieAnimationView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            app:lottie_loop="true"
            app:lottie_fileName="@string/loading_anim_q"
            android:visibility="gone"
            app:lottie_autoPlay="true"
            android:layout_centerInParent="true"
            android:id="@+id/loading_"
            />

    </RelativeLayout>

    <com.wineberryhalley.qstart.ui.views.RoundButton
        android:id="@+id/close_bt"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:buttonElevation="5dp"
        android:visibility="gone"
        app:buttonRadius="8dp"
        app:text="@string/close_"
        app:backgroundColor="@color/white_qs"
        app:textColor="@color/black2_qs"
        android:layout_marginBottom="8dp"
        app:textBold="true"
        app:textPadding="8dp"
        app:textSize="16"/>

    <com.wineberryhalley.qstart.ui.views.AboutQStartText
        android:id="@+id/about_qstart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="5dp"
        android:textAlignment="center"
        android:textColor="@color/black2_qs"
        android:textSize="18sp">

    </com.wineberryhalley.qstart.ui.views.AboutQStartText>

</LinearLayout>


    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="-40dp"
        android:id="@+id/relay"
        android:layout_height="wrap_content">

        <com.wineberryhalley.qstart.ui.views.QImageLoadingView
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:id="@+id/ic_lg"
            android:layout_margin="10dp"
            app:assetName="loading_qsl.json"
            android:layout_centerInParent="true"
            />

    </RelativeLayout>
</RelativeLayout>